# jsonptr

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: codecov.yml
.github/workflows/: check.yml  rust.yml  safety.yml  test.yml
.helix/: languages.toml
src/: arbitrary.rs  assign.rs  component.rs  delete.rs  diagnostic.rs  error.rs  hydrate.rs  index.rs  lib.rs  parse_error.rs  pointer.rs  prelude.rs  ptr.rs  report.rs  reporter.rs  resolve.rs  token.rs  tokens.rs  walk.rs
src/pointer/: pointer_test.rs  slice.rs  strcow.rs
src/snapshots/: jsonptr__assign__json__tests__run-10.snap  jsonptr__assign__json__tests__run-10.snap.new  jsonptr__assign__json__tests__run-11.snap  jsonptr__assign__json__tests__run-11.snap.new  jsonptr__assign__json__tests__run-12.snap  jsonptr__assign__json__tests__run-12.snap.new  jsonptr__assign__json__tests__run-13.snap  jsonptr__assign__json__tests__run-13.snap.new  jsonptr__assign__json__tests__run-14.snap  jsonptr__assign__json__tests__run-14.snap.new  jsonptr__assign__json__tests__run-15.snap  jsonptr__assign__json__tests__run-15.snap.new  jsonptr__assign__json__tests__run-16.snap  jsonptr__assign__json__tests__run-16.snap.new  jsonptr__assign__json__tests__run-17.snap  jsonptr__assign__json__tests__run-17.snap.new  jsonptr__assign__json__tests__run-18.snap  jsonptr__assign__json__tests__run-18.snap.new  jsonptr__assign__json__tests__run-19.snap  jsonptr__assign__json__tests__run-19.snap.new  jsonptr__assign__json__tests__run-2.snap  jsonptr__assign__json__tests__run-20.snap  jsonptr__assign__json__tests__run-21.snap  jsonptr__assign__json__tests__run-22.snap  jsonptr__assign__json__tests__run-23.snap  jsonptr__assign__json__tests__run-24.snap  jsonptr__assign__json__tests__run-25.snap  jsonptr__assign__json__tests__run-26.snap  jsonptr__assign__json__tests__run-27.snap  jsonptr__assign__json__tests__run-28.snap  jsonptr__assign__json__tests__run-29.snap  jsonptr__assign__json__tests__run-3.snap  jsonptr__assign__json__tests__run-30.snap  jsonptr__assign__json__tests__run-31.snap  jsonptr__assign__json__tests__run-32.snap  jsonptr__assign__json__tests__run-33.snap  jsonptr__assign__json__tests__run-34.snap  jsonptr__assign__json__tests__run-4.snap  jsonptr__assign__json__tests__run-4.snap.new  jsonptr__assign__json__tests__run-5.snap  (+202 more)
src/token/: token_test.rs
